[package]
name = "optimisation-beefy-merkle-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38" }
hex = "0.4.3"
hex-literal = "0.3.4"
rs_merkle = { git = "https://github.com/polytope-labs/rs-merkle", branch = "master" }
tiny-keccak = "1.5.0"
